deploy/rancher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tanawat-resume
  labels:
    app: tanawat-resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tanawat-resume
  template:
    metadata:
      labels:
        app: tanawat-resume
    spec:
      containers:
        - name: tanawat-resume
          image: ghcr.io/tanawat09/test-max:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
