deploy/rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanawat-resume
  labels:
    app: tanawat-resume
spec:
  selector:
    app: tanawat-resume
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
